Updated to modern java idioms